2016-09-06  Oliver Lemke  <olemke@core-dump.info>

	* typhon/cm/__init__.py: Rename cmap to cm in module scope loop. Avoids
	warnings about it being shadowed when the name cmap is used as function
	argument name in other functions.

	(mpl_colors): Make n argument lowercase.

	* typhon/cm/_cmocean.py, typhon/cm/_cm.py:

	Initialize datad as dictionary literal.

	* typhon/utils/__init__.py (Timer):

	Fix typo in docs r -> t.

	* typhon/utils/latex.py: Add import numpy to docs.

	* typhon/utils/metaclass.py:

	Rename first argument to __new__ from meta to mcs to adhere to python
	naming conventions. Analog to using cls in class methods.

2016-09-06  Oliver Lemke  <olemke@core-dump.info>

	* typhon/plots/__init__.py:

	(figsize): Fix doc that was still referencing to cm module. Add
	import statements to docs to enable better consistency checking.

	(plot_distribution_as_percentiles): Make d_ls lowercase. Initialize
	locallab early to avoid it being possibly used uninitialized.

	(install_mplstyles): Add import statements to docs.
	Add import for matplotlib.style. reload_libary was unknown.

2016-09-06  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/__init__.py:

	Import GriddedField4.

	(run_arts): Change variable arts_out to lowercase.

	Change reportlevel in example to string. 020 cannot be passed as a
	number. In old python versions it would be interpreted as an octal
	number(not what we want). In Python 3.5 it's a syntax error.

	* typhon/arts/catalogues.py:

	Obey max line length.

	Remove unnecessary parenthesis after class names.

	* typhon/arts/griddedfield.py:

	Move all property documentation into getter.

	* doc/developer.rst: Add info on documenting properties.

	* typhon/constants.py: Obey max line length.

	* doc/modules.rst: Fix module order arts.xml - atmosphere.

2016-09-02  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/scattering.py:

	Remove future import.

	(SingleScatteringData.to_atmlab_dict,